--- a/spring-boot-template-engines-demo/src/main/resources/templates/thymeleaf.html
+++ b/spring-boot-template-engines-demo/src/main/resources/templates/thymeleaf.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1 th:text="${message}"></h1>
+Current date and time: <p th:text="${#dates.format(#dates.createNow(), 'yyyy-MM-dd HH:mm:ss')}"></p>
 </body>
 </html>
