--- a/spring-security-authentication-aws-cognito/AWSCognitoBasicAuthentication/src/main/resources/templates/index.html
+++ b/spring-security-authentication-aws-cognito/AWSCognitoBasicAuthentication/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <body>
     <h2 th:text="${message}" style="text-align:center"></h2>
     <div style="text-align:center;">
-        <button style="cursor: pointer;"><a href="/greetMe">Greet Me!</a></button>
+        <button style="cursor: pointer;"><a href="user/greetMe">Greet Me!</a></button>
     </div>
 </body>
 </html>
