--- a/spring-boot-file-upload-restapi/src/main/resources/templates/home.html
+++ b/spring-boot-file-upload-restapi/src/main/resources/templates/home.html
@@ -28,16 +28,31 @@ font-weight: bold;
 <body>
 <h1>File Upload</h1>
 <form th:action="@{/upload}" th:object="${fileForm}" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" id="file" />
-    <br/>
-    <input type="submit" value="Upload" />
+    <div>
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" />
+    </div>
+    <br />
+    <div>
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" />
+    </div>
+    <br />
+    <div>
+        <label for="file">Select File:</label>
+        <input type="file" name="file" id="file" />
+    </div>
+    <br />
+    <div>
+        <input type="submit" value="Upload" />
+    </div>
 </form>
 
-<form th:action="@{/uploadMultiple}" th:object="${fileForms}" method="post" enctype="multipart/form-data">
-    <input type="file" name="files" id="files" multiple />
-    <br/>
-    <input type="submit" value="Upload" />
-</form>
+<!--<form th:action="@{/uploadMultiple}" th:object="${fileForms}" method="post" enctype="multipart/form-data">-->
+<!--    <input type="file" name="files" id="files" multiple />-->
+<!--    <br/>-->
+<!--    <input type="submit" value="Upload" />-->
+<!--</form>-->
 
 <!-- Add condition for success -->
 <div th:if="${success}" class="success-message">
@@ -51,6 +66,9 @@ font-weight: bold;
 
 <!-- Display file details -->
 <div th:if="${fileForm}">
+    <h1>Entered details: </h1>
+    <p>Name: <span th:text="${name}"></span></p>
+    <p>Email: <span th:text="${email}"></span></p>
     <h2>File Details:</h2>
     <p>Name: <span th:text="${fileForm.file.originalFilename}"></span></p>
     <p>Size: <span th:text="${fileForm.file.size}"></span> bytes</p>
