--- a/spring-boot-file-upload-restapi/src/main/resources/templates/home.html
+++ b/spring-boot-file-upload-restapi/src/main/resources/templates/home.html
@@ -3,18 +3,7 @@
 <head>
     <title>File Upload</title>
     <style>
-body {
-text-align: center;
-}
-h1 {
-margin-bottom: 20px;
-}
-form {
-margin-bottom: 20px;
-}
-input[type="submit"] {
-margin-top: 10px;
-}
+
 .success-message {
 color: green;
 font-weight: bold;
@@ -23,36 +12,34 @@ font-weight: bold;
 color: red;
 font-weight: bold;
 }
-</style>
-</head>
-<body>
-<h1>File Upload</h1>
-<form th:action="@{/upload}" th:object="${fileForm}" method="post" enctype="multipart/form-data">
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name" />
-    </div>
-    <br />
-    <div>
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" />
-    </div>
-    <br />
-    <div>
-        <label for="file">Select File:</label>
-        <input type="file" name="file" id="file" />
-    </div>
-    <br />
-    <div>
-        <input type="submit" value="Upload" />
-    </div>
-</form>
 
-<!--<form th:action="@{/uploadMultiple}" th:object="${fileForms}" method="post" enctype="multipart/form-data">-->
-<!--    <input type="file" name="files" id="files" multiple />-->
-<!--    <br/>-->
-<!--    <input type="submit" value="Upload" />-->
-<!--</form>-->
+</style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+</head>
+
+<body>
+<div class="container">
+    <h1 class="mt-5">File Upload</h1>
+    <form th:action="@{/upload}" th:object="${fileForm}" method="post" enctype="multipart/form-data" class="form">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label for="file">Select File:</label>
+            <input type="file" name="file" id="file" class="form-control-file" />
+        </div>
+        <div class="mt-4">
+            <input type="submit" value="Upload" class="btn btn-primary" />
+        </div>
+    </form>
+</div>
+
 
 <!-- Add condition for success -->
 <div th:if="${success}" class="success-message">
@@ -65,15 +52,42 @@ font-weight: bold;
 </div>
 
 <!-- Display file details -->
-<div th:if="${fileForm}">
-    <h1>Entered details: </h1>
-    <p>Name: <span th:text="${name}"></span></p>
-    <p>Email: <span th:text="${email}"></span></p>
-    <h2>File Details:</h2>
-    <p>Name: <span th:text="${fileForm.file.originalFilename}"></span></p>
-    <p>Size: <span th:text="${fileForm.file.size}"></span> bytes</p>
-    <p>Type: <span th:text="${fileForm.file.contentType}"></span></p>
-</div>
+<table th:if="${fileForm}" class="table table-bordered">
+    <thead class="thead-light">
+    <tr>
+        <th>User name</th>
+        <td th:text="${name}"></td>
+    </tr>
+    <tr>
+        <th>User email</th>
+        <td th:text="${email}"></td>
+    </tr>
+    <tr>
+        <th>File name</th>
+        <td th:text="${fileForm.file.originalFilename}"></td>
+    </tr>
+
+    <tr>
+        <th>File size</th>
+        <td th:text="${fileForm.file.size} + ' bytes'"></td>
+    </tr>
+
+    <tr>
+        <th>File content type</th>
+        <td th:text="${fileForm.file.contentType}"></td>
+    </tr>
+    </thead>
+    <tbody>
+<!--    <tr>-->
+<!--      -->
+<!--        <td th:text="${fileForm.file.originalFilename}"></td>-->
+<!--        <td th:text="${fileForm.file.size} + ' bytes'"></td>-->
+<!--        <td th:text="${fileForm.file.contentType}"></td>-->
+<!--    </tr>-->
+    </tbody>
+</table>
+
+
 
 <div th:if="${fileForms}">
     <h2>File Details:</h2>
