--- a/spring-boot-file-upload-restapi/src/main/resources/templates/home.html
+++ b/spring-boot-file-upload-restapi/src/main/resources/templates/home.html
@@ -54,11 +54,12 @@ font-weight: bold;
     <thead class="thead-light">
     <tr>
         <th>User name</th>
-        <td th:text="${name}"></td>
+        <td th:text="${user.name}"></td>
+
     </tr>
     <tr>
         <th>User email</th>
-        <td th:text="${email}"></td>
+        <td th:text="${user.email}"></td>
     </tr>
     <tr>
         <th>File name</th>
